# NFT-WITH-NEAR

./: README.md  package-lock.json  package.json  vite.config.js
near-contract/: Cargo.toml  README.md
near-contract/src/: lib.rs
nft-contract/: hardhat.config.js
nft-contract/ignition/deployments/chain-1328/: journal.jsonl
nft-contract/ignition/deployments/chain-1329/: journal.jsonl
nft-contract/scripts/: deploy-sei.js
src/: App.jsx  main.jsx
src/components/: DashboardPage.jsx  MintNFTPage.jsx  PictureGallery.jsx
src/utils/: config.js  near.js  nearUtils.js  wallet-selector.js
