[package]
name = "near-contract"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.15.0-rust-1.86.0"
image_digest = "sha256:aad208b09976f643b56104cc6af87fbb03afadff2e76f9e5e3fa283969e15f8b"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = "5.0.0"
borsh = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

[dev-dependencies]
near-sdk = { version = "5.14", features = ["unit-testing"] }
near-workspaces = { version = "0.20", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
default = ["near-sdk/legacy"]
legacy = ["near-sdk/legacy"] 